cabal-version:       >=1.10
name:                nonogram
version:             0.1.0.0
license-file:        LICENSE
author:              Markus Liedl
maintainer:          markus@e-bot7.com
copyright:           markus@e-bot7.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable nonogram
  main-is:             Nonogram.hs
  build-depends:       base >=4.14 && <4.15,
                       text,
                       containers,
                       array,
                       hspec
  default-language:    Haskell2010
